Fix layout issues regarding wrong tooltip positioning
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/verification-coverage@40005 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/src/org/sosy_lab/cpachecker/core/counterexample/report.css
+++ b/src/org/sosy_lab/cpachecker/core/counterexample/report.css
@@ -895,18 +895,14 @@ text {
 }
 
 .focus circle {
-  fill: steelblue;
+  fill: #10b705;
 }
 
 .focus text {
   font-size: 14px;
 }
 
-.tooltip {
-  fill: white;
-  stroke: #000;
-}
-
-.tooltip-date, .tooltip-likes {
+.tooltip-x,
+.tooltip-y {
   font-weight: bold;
 }
